# urbanupc-pfe

./: .gitignore  README.md
ebios-rm/: Makefile  README-PFE.md  metadata.yaml
pipeline/: Makefile  README-PFE.md  README.md  pyproject.toml  requirements.txt
pipeline/.github/workflows/: homo-ci.yml
pipeline/.homo-ci/evidence/: evidence.db
pipeline/.homo-ci/evidence/trail/: 2026-05-15.jsonl
pipeline/.homo-ci/snapshots/: snapshot-68fac537-414b-4c39-bec9-19f1b3d11c6c.jsonl  snapshot-f9a2a866-8d46-4efc-b992-80bc2f3b8362.jsonl
pipeline/config/: compliance_status.yaml  dossier_context.yaml  pacs_status.yaml
pipeline/homo_ci/: __init__.py  ca.py  cli.py  diff.py  models.py  render.py  sign.py  storage.py
pipeline/homo_ci/tests/: test_diff.py  test_models.py  test_sign.py  test_storage.py
pipeline/homo_ci/watchers/: __init__.py  base.py  wc_ad.py  wc_compliance.py  wc_cve.py  wc_kri.py  wc_nsg.py  wc_pacs.py  wc_wazuh.py
pipeline/scripts/: demo.py
pipeline/styles/: dossier.css
pipeline/templates/: dossier.md.j2
pipeline/validation/: P_total_catalog.yaml  injection_protocol.yaml
pipeline/validation/results/: H1-RESULTS.html  H1-RESULTS.md  H2-RESULTS.html  H2-RESULTS.md  H3-RESULTS.html  H3-RESULTS.md  SYNTHESE-H1-H2-H3.html  SYNTHESE-H1-H2-H3.md  _style.css  h1_data.json  h1_sensitivity.json  h2_calibration.json  h2_data.json  h2_sensitivity.json  h3_data.json  h3_sensitivity.json
pipeline/validation/scripts/: calibrate_h2.py  measure_h1.py  measure_h1_sensitivity.py  measure_h2.py  measure_h2_sensitivity.py  measure_h3.py  measure_h3_sensitivity.py
(+161 files in other folders)
